--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "node-red-contrib-lot",
-    "version": "0.0.4",
+    "version": "0.1.0",
     "description": "Node-RED GPIO development library",
     "keywords": [
         "iot",
         "node-red",
         "gpio",
-        "lot"
+        "lot",
+        "sbc"
     ],
     "license": "MIT",
     "contributors": [
